# merak

./: .cspell.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  biome.json  components.json  index.html  package.json  pnpm-lock.yaml
.changes/: add-react-router.md  api-result.md  auth-session.md  auth.md  base-ui-instead.md  config.toml  error-codes.md  foreign-key.md  merak-macros.md  model-objects.md  optimize-auth-module.md  record-id.md  redoc.md  refactor-utoipa.md  setup-openapi.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  custom.yml  feature_request.yml
.github/workflows/: semifold-ci.yaml  unit-test.yaml
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/src/: lib.rs  prelude.rs
crates/macros/: CHANGELOG.md  Cargo.toml
crates/macros/src/: attr.rs  expand.rs  lib.rs  utils.rs
crates/macros/tests/: data_model.rs  table_name.rs
crates/merak/: CHANGELOG.md  Cargo.toml
crates/merak/src/: lib.rs  main.rs
crates/merak/src/auth/: error.rs  jwt.rs  mod.rs  service.rs
crates/merak/src/common/: code.rs  mod.rs  response.rs
crates/merak/src/models/: account.rs  auth.rs  user.rs
crates/merak/src/routes/: auth.rs
crates/merak/src/services/: auth.rs  code.rs  error.rs  mod.rs  password.rs  session.rs
public/: icon.tsx
src/: index.css  index.tsx  router.tsx
src/client/: client.gen.ts  index.ts  sdk.gen.ts  types.gen.ts
src/client/client/: utils.gen.ts
src/components/layout/dashboard/: dashboard-header.tsx  dashboard-layout.tsx  dashboard-sidebar.tsx
src/components/ui/: label.tsx
src/hooks/: useLocale.tsx
src/i18n/: index.ts
src/i18n/en/: landing.json
src/i18n/zh/: landing.json
src/icon/: icon.tsx
src/pages/: index.tsx  landing.tsx  login.tsx  register.tsx
src/pages/app/: index.tsx
src/pages/auth/: Login.tsx  Register.tsx  home.tsx  login.tsx  register.tsx
src/router/: index.tsx
src/services/: auth.ts
