[package]
name = "merak-core"
version = "0.1.0-alpha.1"
edition = "2024"

[dependencies]
surrealdb = "2.5.0"
merak-macros = { version = "0.1.0-alpha.1", path = "../macros" }
serde = { version = "1.0.228", features = ["derive"] }
utoipa = { version = "5.4.0", optional = true }

[features]
default = []
utoipa = ["dep:utoipa", "merak-macros/utoipa"]
