[package]
name = "merak-macros"
version = "0.1.0-alpha.1"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
darling = { version = "0.23.0", features = ["serde"] }
heck = "0.5.0"
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = "2.0.114"

[dev-dependencies]
merak-core = { version = "0.1.0-alpha.0", path = "../core" }
serde = { version = "1.0.228", features = ["derive"] }
surrealdb = "2.5.0"
utoipa = "5.4.0"

[features]
default = []
utoipa = []
