[package]
name = "merak"
version = "0.1.0-alpha.1"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
merak-core = { path = "../core", version = "0.1.0-alpha.1" }
merak-macros = { path = "../macros", version = "0.1.0-alpha.1" }
rand = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
surrealdb = "2.5.0"
tokio = { version = "1.49.0", features = ["full"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.20", features = ["serde", "v4"] }
